<resources>
    <string name="app_name">PrivateKeyboard</string>
    <string name="first_name">Full name</string>
    <string name="last_name">Company name</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email Address</string>
    <string name="gender">Gender</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="qr_code">QR code</string>
    <string name="tilt_adjustment">Tilt adjustment</string>
    <string name="angle">Angle: 0</string>
    <string name="take_picture">TAKE PICTURE</string>
    <string name="host_name">Host name</string>
    <string name="imgcontent">Taken Image</string>
    <string name="sendform">Send form</string>
    <string name="visitor">VISITOR</string>
    <string name="slogan">Virtual Touch</string>
    <string name="host">Host:</string>
    <string name="Valid">Valid through:</string>
    <string name="inform">Allow only ONE connection at a time </string>
</resources>