<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/visitorCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:elevation="8dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/visitorImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="15"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name" />

                <TextView
                    android:id="@+id/visitorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Valid" />

                <TextView
                    android:id="@+id/visitDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="#2196F3"
            android:gravity="center"
            android:text="@string/visitor"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/companyName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/slogan" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/host" />

                <TextView
                    android:id="@+id/hostName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="411dp"
            android:layout_height="323dp"
            android:orientation="vertical"
            android:padding="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:tag="hidden">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inform"
                    android:textColor="#EA0707" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:tag="wVisible">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/fullNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/first_name"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:tag="wVisible">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/companyNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/last_name"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:tag="wVisible">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/host_name" />

                <EditText
                    android:id="@+id/hostNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/last_name"
                    android:ems="10"
                    android:hint="@string/host_name"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:orientation="horizontal"-->
            <!--                android:tag="wVisible">-->

            <!--                <TextView-->
            <!--                    android:id="@+id/textView3"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:text="@string/phone_number" />-->

            <!--                <EditText-->
            <!--                    android:id="@+id/editTextTextPersonName3"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:autofillHints="@string/phone_number"-->
            <!--                    android:ems="10"-->
            <!--                    android:hint="@string/phone_number"-->
            <!--                    android:inputType="phone" />-->
            <!--            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:tag="wVisible">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email_address" />

                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/email_address"
                    android:ems="10"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:orientation="vertical"-->
            <!--                android:tag="wVisible">-->

            <!--                <TextView-->
            <!--                    android:id="@+id/textView5"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:text="@string/gender" />-->

            <!--&lt;!&ndash;                <RadioGroup&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:id="@+id/radioSex"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:layout_width="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:layout_height="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:tag="sex">&ndash;&gt;-->

            <!--&lt;!&ndash;                    <RadioButton&ndash;&gt;-->
            <!--&lt;!&ndash;                        android:id="@+id/radioMale"&ndash;&gt;-->
            <!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;                        android:text="@string/radio_male" />&ndash;&gt;-->

            <!--&lt;!&ndash;                    <RadioButton&ndash;&gt;-->
            <!--&lt;!&ndash;                        android:id="@+id/radioFemale"&ndash;&gt;-->
            <!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;                        android:text="@string/radio_female" />&ndash;&gt;-->

            <!--&lt;!&ndash;                </RadioGroup>&ndash;&gt;-->

            <!--            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:tag="hidden">

                <TextView
                    android:id="@+id/seekBarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1" />


                <TextView
                    android:id="@+id/tiltValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/angle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:tag="hidden">

                <Button
                    android:id="@+id/buttonCam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/take_picture" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/takenImage"
                    android:layout_width="192dp"
                    android:layout_height="256dp"
                    android:background="@drawable/hiiii"
                    android:contentDescription="@string/imgcontent"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/sendEmailButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/qrImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="35dp"
                    android:contentDescription="@string/qr_code"
                    app:layout_constraintBottom_toTopOf="@+id/sendEmailButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <Button
                    android:id="@+id/sendEmailButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sendform"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <!--    <ImageButton-->
    <!--        android:id="@+id/imageButton"-->
    <!--        android:layout_width="160dp"-->
    <!--        android:layout_height="160dp"-->
    <!--        android:layout_marginBottom="20dp"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/qrImage"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.498"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:srcCompat="@drawable/hiiii"-->
    <!--        android:scaleType="fitXY"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>